+ API implementation
+ go module setup
+ code-generated API boilerplate (with oapi-codegen)
+ API implementation
~ refined openapi.yaml
+ API tests
+ mock DB
